# Python-lang

./: .gitignore  LatexifyNOtebook.ipynb  TensorFlowSlim.py  TestsWithLatex.ipynb  checkingCRMCSVFile.py  dummy-commits.py  dumpPostgresQLSchema.py  duration.py  equations.py  fib.py  findinplaylist.py  fizzbuzz.py  geneticAlgorithms101.py  geneticAlgorithms_Passwords.py  latexify.py  openplugincore_demo.ipynb  randomServer.py  readme.txt
bark-with-voice-clone/: .gitignore  clone-voice.py  clone_voice.ipynb  dummy.py  generate-speech.py  generate.ipynb  pyproject.toml
bark-with-voice-clone/bark/: generation.py
bark-with-voice-clone/suno_bark.egg-info/: PKG-INFO
data-engineering-interview-patterns/: .gitignore  Makefile  README.md  pyproject.toml
data-engineering-interview-patterns/.devcontainer/: devcontainer.json
data-engineering-interview-patterns/benchmarks/: README.md  binary_search_vs_linear.py  graph_topo_sort.py  hash_map_vs_nested_loop.py  heap_vs_sort.py  interval_merge.py  sliding_window_vs_recompute.py  two_pointer_merge_vs_sort.py
data-engineering-interview-patterns/docs/: GLOSSARY.md  INTERVIEW_STRATEGY.md  PATTERN_RECOGNITION.md  STUDY_PLANS.md  TIME_COMPLEXITY_CHEATSHEET.md
data-engineering-interview-patterns/mock_interviews/: README.md
data-engineering-interview-patterns/patterns/: README.md
data-engineering-interview-patterns/prompts/: audit_all_patterns.sh  cc_prompt_create_08_part1_readme.md  cc_prompt_create_08_part2_prob1_2.md  cc_prompt_create_08_part3_prob3_4.md  cc_prompt_create_08_part4_prob5_6.md  cc_prompt_create_08_part5_de_scenarios.md  cc_prompt_create_09_part1_readme.md  cc_prompt_create_09_part2_prob1_2.md  cc_prompt_create_09_part3_prob3_4.md  cc_prompt_create_09_part4_de1_2.md  cc_prompt_create_09_part5_de3_4.md  cc_prompt_create_10_part1_readme.md  cc_prompt_create_10_part2_prob1_2.md  cc_prompt_create_10_part3_prob3_4.md  cc_prompt_create_10_part4_prob5_de1_2.md  cc_prompt_create_10_part5_de3_4.md  cc_prompt_create_11_part1_readme.md  cc_prompt_create_11_part2_bloom.md  cc_prompt_create_11_part3_hll.md  cc_prompt_create_11_part4_cms.md  cc_prompt_create_11_part5_de_scenarios.md  cc_prompt_create_12_part1_readme.md  cc_prompt_create_12_part2_prob1_2.md  cc_prompt_create_12_part3_prob3_4.md  (+36 more)
timelapse-master/: .gitignore  README.md  pyproject.toml
(+788 files in other folders)
