[tool.poetry]
name = "suno-bark"
version = "0.0.1a"
description = "Bark text to audio model"
readme = "README.md"
authors =  ["Sergio Rodrigues Giraldo based on Suno Inc"]
license = "Attribution-NonCommercial 4.0 International"

[tool.poetry.dependencies]
    python = "^3.11"
    boto3= "*"
    encodec= "*"
    funcy= "*"
    numpy= "*"
    scipy= "*"
    tokenizers= "*"
    torch= "*"
    tqdm= "*"
    transformers= "*"

[tool.poetry.dev-dependencies]
    bandit= "*"
    black= "*"
    codecov= "*"
    flake8= "*"
    huggingface-hub= "*"
    hypothesis= "*"
    isort= "*"
    jupyter= "*"
    mypy= "*"
    nbconvert= "*"
    nbformat= "*"
    pydocstyle= "*"
    pylint= "*"
    pytest= "*"
    pytest-cov= "*"
